# fraud-detection

./: .env.example  .gitignore  Makefile  README.md  app.py  consumer.py  data_processor_consumer.py  docker-compose.yml  ml_consumer.py  producer.py  pyproject.toml  visualization_consumer.py
model/: train.py
model/saved/: fraud_detector.pkl  metrics.json
notebooks/: eda.ipynb
scripts/: init-kafka-topics.sh
